--- a/RegistryService/Backend/RegistryService/src/main/resources/application.properties
+++ b/RegistryService/Backend/RegistryService/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Application setup
 spring.application.name=RegistryService
 server.port=8001
 
@@ -14,6 +15,10 @@ spring.jpa.hibernate.ddl-auto=update
 # Redis settings
 spring.redis.host=10.157.3.213
 spring.redis.port=6379
+
+#Downline urls for connecting to downline Flask app
+downline_url=http://192.168.216.146:8003
+
 
 # Logging
 #logging.level.org.hibernate.SQL=DEBUG
