--- a/S4BucketApi/Backend/S4BucketService/src/main/resources/application.properties
+++ b/S4BucketApi/Backend/S4BucketService/src/main/resources/application.properties
@@ -1,12 +1,13 @@
+# Application setup
 spring.application.name=RegistryService
 server.port=8002
+spring.servlet.multipart.max-request-size=-1
+
 
 # DataSource settings: PostgreSQL
 spring.datasource.url=jdbc:postgresql://10.157.3.213:5432/s4_bucket
 spring.datasource.username=cs695
 spring.datasource.password=cs695
-
-# Hibernate properties
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
