--- a/RegistryService/Load Test/faasTest/src/main/resources/application.properties
+++ b/RegistryService/Load Test/faasTest/src/main/resources/application.properties
@@ -1,17 +1,21 @@
 spring.application.name=faasTest
 server.port=8005
 
+# Put the IP of host where RegistryService is running
+register.function.url=http://localhost:8001/faas/registerFunction
+deregister.function.url=http://localhost:8001/faas/deregisterFunction
+
 # Put the IP of host where S4BucketService is running
 create.bucket.url=http://localhost:8002/s4/createBucket
 upload.bucket.url=http://localhost:8002/s4/uploadIntoBucket
 
 # Put the IP of host where Downline application is running
-status.bucket.url=http://192.168.216.146:8003/api/v1/status
+status.bucket.url=http://192.168.0.104:8003/api/v1/status
 
 bucket.name=test
 function.name=test
 
-resource.folder.path=src/main/resources/static/images/
+resource.folder.path=src/main/resources
 interval.poll.ms=20000
 
 
