Modifies code handles function DB entry

--- a/RegistryService/Load Test/faasTest/src/main/resources/application.properties
+++ b/RegistryService/Load Test/faasTest/src/main/resources/application.properties
@@ -6,14 +6,15 @@ register.function.url=http://localhost:8001/faas/registerFunction
 deregister.function.url=http://localhost:8001/faas/deregisterFunction
 
 # Put the IP of host where S4BucketService is running
-create.bucket.url=http://localhost:8002/s4/createBucket
-upload.bucket.url=http://localhost:8002/s4/uploadIntoBucket
+bucket.create.url=http://localhost:8002/s4/createBucket
+bucket.upload.url=http://localhost:8002/s4/uploadIntoBucket
+bucket.delete.url=http://localhost:8002/s4/deleteBucket
 
 # Put the IP of host where Downline application is running
-status.bucket.url=http://192.168.0.104:8003/api/v1/status
+bucket.status.url=http://192.168.0.104:8003/api/v1/status
 
-bucket.name=test
-function.name=test
+bucket.name=blur
+function.name=blur
 
 resource.folder.path=src/main/resources
 interval.poll.ms=20000
