Adds little fixes

--- a/RegistryService/Load Test/faasTest/src/main/resources/application.properties
+++ b/RegistryService/Load Test/faasTest/src/main/resources/application.properties
@@ -11,12 +11,10 @@ bucket.upload.url=http://localhost:8002/s4/uploadIntoBucket
 bucket.delete.url=http://localhost:8002/s4/deleteBucket
 
 # Put the IP of host where Downline application is running
-bucket.status.url=http://192.168.0.104:8003/api/v1/status
+bucket.status.url=http://192.168.0.101:8003/api/v1/status
 
-bucket.name=blur
-function.name=blur
+# bucket.name=test
+# function.name=test
+#resource.folder.path=src/main/resources
 
-resource.folder.path=src/main/resources
-interval.poll.ms=20000
-
-
+interval.poll.ms=15000
