--- a/S4BucketApi/Backend/S4BucketService/src/main/resources/application.properties
+++ b/S4BucketApi/Backend/S4BucketService/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# HikariCP settings
+spring.datasource.hikari.maximum-pool-size=50
+spring.datasource.hikari.idle-timeout=60000
+
 # Redis settings
 spring.redis.host=10.157.3.213
 spring.redis.port=6379
