--- a/CodeRunner/dockerfiles/Dockerfile
+++ b/CodeRunner/dockerfiles/Dockerfile
@@ -1,5 +1,13 @@
+FROM python:slim AS builder
+RUN apt-get update && apt-get install -y libpq-dev gcc
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+COPY requirements.txt .
+RUN pip install -r requirements.txt
 
-FROM python:alpine
-WORKDIR /app
-RUN apk update && apk add ffmpeg libsm-dev libxrender libxext-dev 
-CMD python -c `print("Hello!")`
+FROM python:slim
+RUN apt-get update && apt-get install -y libpq-dev gcc && rm -rf /var/lib/apt/lists/*
+COPY --from=builder /opt/venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH" \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
