Run app locally

--- a/RegistryService/Load Test/faasTest/src/main/resources/application.properties
+++ b/RegistryService/Load Test/faasTest/src/main/resources/application.properties
@@ -11,7 +11,9 @@ bucket.upload.url=http://localhost:8002/s4/uploadIntoBucket
 bucket.delete.url=http://localhost:8002/s4/deleteBucket
 
 # Put the IP of host where Downline application is running
-bucket.status.url=http://192.168.0.101:8003/api/v1/status
+## bucket.status.url=http://192.168.0.101:8003/api/v1/status
+bucket.status.url=http://localhost:8003/api/v1/status
+
 
 # bucket.name=test
 # function.name=test
